<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clarify"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4543A047"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/clarifyDesc"
        android:layout_width="320dp"
        android:layout_height="271dp"
        android:gravity="center"
        android:text="@string/clarify"
        android:textColor="#0E0D0D"
        android:textSize="24sp"
        android:textStyle="normal"
        app:fontFamily="sans-serif-condensed-light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/introClarify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textColor="#0E0D0D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/clarifyDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

    <Button
        android:id="@+id/start"
        android:layout_width="226dp"
        android:layout_height="48dp"
        android:text="@string/goAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clarifyDesc"
        app:layout_constraintVertical_bias="0.283" />
</androidx.constraintlayout.widget.ConstraintLayout>