<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pageinfo2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C35A6FD"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="306dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065"
        app:srcCompat="@drawable/breast_shape" />

    <TextView
        android:id="@+id/bShape"
        android:layout_width="393dp"
        android:layout_height="37dp"
        android:text="@string/bShape"
        android:textColor="#0E0D0D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/shapeb"
        android:layout_width="378dp"
        android:layout_height="59dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bShape"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/heightT"
        android:layout_width="159dp"
        android:layout_height="34dp"
        android:text="@string/height"
        android:textColor="#0E0D0D"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeb"
        app:layout_constraintVertical_bias="0.061" />

    <EditText
        android:id="@+id/heightE"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightT"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submitB"
        android:layout_width="268dp"
        android:layout_height="70dp"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightE"
        app:layout_constraintVertical_bias="0.417" />

</androidx.constraintlayout.widget.ConstraintLayout>